test/fail/page-as-template.app
//Cannot use page as template

application test

  entity Entity {
    property :: String
  }

  define page home() {
    var e := Entity{}
    home()
  }
